[package]
name = "memkb"
description = "A local AI in memory RAG for markdown files in a folder exposed as MCP"
version = "0.0.1"
edition = "2024"
license = "MIT"

[dependencies]
rmcp = { version="0", features = [
    "server",
    "macros",
    "transport-sse-server",
    "transport-io",
    "transport-streamable-http-server",
    "auth",
    "elicitation",
    "schemars",
] }
tokio = { version = "1", features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "io-std",
    "signal",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tower-http = { version = "0.6", features = ["cors"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0", features = ["server", "http1", "http2", "tokio"] }
tower = { version = "0.5", features = ["util"] }
futures = "0.3"
http-body-util = "0.1"
tokio-util = { version = "0.7" }
clap = { version = "4.0", features = ["derive"] }
walkdir = "2.5"
openai-api-rs = "6.0.9"
schemars = "1.0.4"
text-splitter = { version = "0.27.0", features = ["markdown"] }
simsimd = "6.5.1"
reqwest = { version = "0.11", features = ["json", "stream"] }
